// SPDX-License-Identifier: MIT
pragma solidity 0.8.6;

import "../_AuraReceiver.sol";


contract BSC_BscBridge is _AuraReceiver {

}
