@startuml



class Bsc_AmbBridge {
    +SubmitTransferPoSA(PoSAProof proof)
}
class Bsc_BscBridge {
    +SubmitTransferAura(AuraProof proof)
}

class Eth_AmbBridge {
    +SubmitTransferPoW(PoWProof proof)
}
class Eth_EthBridge {
    +SubmitTransferAura(AuraProof proof)
}


abstract class CheckPoW {
    -CheckPoW(PoWProof proof)
}

abstract class CheckAura {
    -CheckAura(AuraProof proof)
}

abstract class CheckPoSA {
    -CheckPoSA(PoSAProof proof)
}


entity BlockPoW {
        +bytes3 p0WithNonce;
        +bytes3 p0WithoutNonce;

        +bytes p1;
        +bytes32 parentOrReceiptHash;
        +bytes p2;
        +bytes difficulty;
        +bytes p3;
        +bytes number;
        +bytes p4;
        +bytes p5;
        +bytes nonce;
        +bytes p6;

        +uint[] dataSetLookup;
        +uint[] witnessForLookup;
}

entity BlockPoSA {
       +bytes3 p0Signed;
       +bytes3 p0Unsigned;

        +bytes32 parentHash;
        +bytes p1;
        +bytes32 receiptHash;
        +bytes p2;
        +bytes number;
        +bytes p3;

        +bytes p4Signed;
        +bytes p4Unsigned;
        +bytes extraData;

        +bytes p5;
}

entity BlockAura {
    +bytes p0_seal;
    +bytes p0_bare;

    +bytes p1;
    +bytes32 prevHashOrReceiptRoot;
    +bytes p2;
    +bytes timestamp;
    +bytes p3;

    +bytes s1;
    +bytes signature;
    +bytes s2;
}



abstract class CommonBridge {
    +mapping(address=>address) tokenAddresses
    +address sideBridgeAddress
    +address feeRecipient
    +uint fee
    +uint lockTime
    +uint timeframe

    -uint lastTimeframe
    +uint inputEventId
    -uint outputEventId
    -Transfer[] withdraw_queue
    --
    +withdraw(tokenAddress, toAddress, amount, unwrap)
    +wrapWithdraw(toAddress)
    --admin--
    +tokenAddresses update methods ()
    +setTimeframe()
    +setLockTime()
    +pause() / unpause()
}


entity Transfer {
    +tokenAddress
    +toAddress
    +amount
}


Eth_AmbBridge --> CheckPoW
Eth_EthBridge --> CheckAura

Bsc_BscBridge --> CheckAura
Bsc_AmbBridge --> CheckPoSA

CheckPoW --> BlockPoW
CheckPoSA --> BlockPoSA
CheckAura --> BlockAura

CheckPoW --> Transfer
CheckPoSA --> Transfer
CheckAura --> Transfer

Eth_AmbBridge --> CommonBridge
Eth_EthBridge --> CommonBridge
Bsc_AmbBridge --> CommonBridge
Bsc_BscBridge --> CommonBridge

CommonBridge --> Transfer


@enduml
